[package]
name = "holo_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
tray-icon = "0.24"
winit = "0.30"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
bytes = "1"
regex = "1.10"
once_cell = "1"
futures-util = "0.3"
crossbeam-channel = "0.5.16"
async-stream = "0.3.6"
indexmap = { version = "2", features = ["serde"] }
